# NestMate

./: .gitignore  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_highlights_images.py  0003_updated_at.py
backend/app/: deps.py  main.py
backend/app/api/: admin.py  auth.py  favorites.py  listings.py  uploads.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  favorite.py  listing.py  user.py
backend/app/schemas/: listing.py  user.py
backend/app/services/: ai_extract.py  images.py  listing_service.py  oauth.py  staleness.py  xhs_fetch.py
backend/tests/: conftest.py  test_extract.py  test_images.py  test_listings.py  test_permissions.py  test_staleness.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  constants.ts  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: ContactGate.tsx  FilterBar.tsx  ListingCard.tsx
frontend/src/pages/: AdminIngest.tsx  AdminListings.tsx  AuthCallback.tsx  CreatePost.tsx  EditPost.tsx  Favorites.tsx  Home.tsx  ListingDetail.tsx  Login.tsx  MyPosts.tsx  Profile.tsx
frontend/src/store/: auth.tsx
frontend/src/utils/: date.ts
